--- a/index.html
+++ b/index.html
@@ -120,17 +120,19 @@ h1{
 const usuario = JSON.parse(localStorage.getItem("usuarioRF"));
 const admin = JSON.parse(localStorage.getItem("adminRF"));
 
+// ADMIN logado vai direto para o dashboard admin
 if(admin){
-  window.location.href = "admin.html";
+  window.location.href = "dashboard-admin.html";
 }
 
+// USUÁRIO logado
 if(usuario){
   if(usuario.tipo === "motorista"){
-    window.location.href = "index.html";
+    window.location.href = "dashboard-motorista.html";
   }
 
   if(usuario.tipo === "passageiro"){
-    window.location.href = "index-passageiro.html";
+    window.location.href = "dashboard-passageiro.html";
   }
 }
 
