--- a/cadastro.html
+++ b/cadastro.html
@@ -4,16 +4,17 @@
 <meta charset="UTF-8">
 <title>Cadastro – RF Driver</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <link rel="stylesheet" href="./theme/theme.css">
 
 <style>
-body {
+body{
   background:#f4f4f4;
   font-family:Inter, Arial, sans-serif;
   padding:16px;
 }
 
-.card {
+.card{
   background:#fff;
   padding:22px;
   border-radius:18px;
@@ -22,12 +23,12 @@ body {
   margin:auto;
 }
 
-h1 {
+h1{
   text-align:center;
   margin-bottom:18px;
 }
 
-select, input {
+select,input{
   width:100%;
   padding:13px;
   border-radius:12px;
@@ -36,7 +37,7 @@ select, input {
   font-size:.95rem;
 }
 
-button {
+button{
   width:100%;
   padding:15px;
   border:none;
@@ -45,9 +46,14 @@ button {
   background:#d4af37;
   color:#000;
   font-size:1rem;
+  cursor:pointer;
 }
 
-.info {
+button:active{
+  transform:scale(.98);
+}
+
+.info{
   font-size:.75rem;
   color:#666;
   text-align:center;
@@ -59,63 +65,88 @@ button {
 <body>
 
 <div class="card">
-  <h1>Cadastro</h1>
+  <h1>Cadastro de Passageiro</h1>
 
-  <select id="tipo">
-    <option value="">Quem é você?</option>
-    <option value="passageiro">Passageiro</option>
-    <option value="motorista">Motorista</option>
-  </select>
-
+  <!-- PASSAGEIRO NÃO ESCOLHE TIPO -->
   <input type="text" id="nome" placeholder="Nome completo">
   <input type="tel" id="telefone" placeholder="Telefone (com DDD)">
+  <input type="text" id="cpf" placeholder="CPF" maxlength="14">
 
-  <!-- CPF sempre visível, não só para motorista -->
-  <input type="text" id="cpf" placeholder="CPF">
-
-  <button id="btnCadastrar">Continuar</button>
+  <button id="btnCadastrar">
+    Finalizar cadastro
+  </button>
 
   <div class="info">
-    O cadastro é feito uma única vez neste dispositivo.
+    Este cadastro é feito apenas uma vez.<br>
+    Em novos acessos, utilize o login com CPF.
   </div>
 </div>
 
+<!-- SUPABASE -->
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script>
 const supabaseClient = supabase.createClient(
   "https://msnqiiwcityikslikbow.supabase.co",
-  "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im1zbnFpaXdjaXR5aWtzbGlrYm93Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc3MDM5OTgsImV4cCI6MjA4MzI3OTk5OH0.0KyaSuL5At4_Cfa4TOM7kvvkVYv-gmR2sb7vX6VHkaU"
+  "SUA_CHAVE_PUBLICA_AQUI"
 );
+</script>
 
-document.getElementById("btnCadastrar").addEventListener("click", cadastrar);
+<script>
+/* ================= PROTEÇÃO ================= */
 
-async function cadastrar() {
-  const tipo = document.getElementById("tipo").value;
-  const nome = document.getElementById("nome").value.trim();
-  const telefone = document.getElementById("telefone").value.trim();
-  const cpf = document.getElementById("cpf").value.trim();
+// Se já estiver logado como passageiro, vai direto
+const usuarioLogado = JSON.parse(localStorage.getItem("usuarioRF"));
+if(usuarioLogado && usuarioLogado.tipo === "passageiro"){
+  window.location.href = "dashboard-passageiro.html";
+}
 
-  if (!tipo || !nome || !telefone || !cpf) {
-    alert("Preencha todos os campos obrigatórios");
+/* ================= ELEMENTOS ================= */
+
+const nomeInput = document.getElementById("nome");
+const telInput = document.getElementById("telefone");
+const cpfInput = document.getElementById("cpf");
+const btn = document.getElementById("btnCadastrar");
+
+/* ================= MÁSCARA CPF ================= */
+
+cpfInput.addEventListener("input", () => {
+  let v = cpfInput.value.replace(/\D/g,"").slice(0,11);
+  v = v.replace(/(\d{3})(\d)/,"$1.$2");
+  v = v.replace(/(\d{3})(\d)/,"$1.$2");
+  v = v.replace(/(\d{3})(\d{1,2})$/,"$1-$2");
+  cpfInput.value = v;
+});
+
+/* ================= CADASTRO ================= */
+
+btn.addEventListener("click", cadastrar);
+
+async function cadastrar(){
+  const nome = nomeInput.value.trim();
+  const telefone = telInput.value.trim();
+  const cpf = cpfInput.value.replace(/\D/g,"");
+
+  if(!nome || !telefone || cpf.length !== 11){
+    alert("Preencha corretamente todos os campos");
     return;
   }
 
-  if (tipo === "motorista") {
-    const { data, error } = await supabaseClient
-      .from("motoristas_autorizados")
-      .select("*")
-      .eq("cpf", cpf)
-      .eq("ativo", true)
-      .single();
+  /* 🔎 Verifica se CPF já existe */
+  const { data: existente } = await supabaseClient
+    .from("usuarios")
+    .select("id")
+    .eq("cpf", cpf)
+    .eq("tipo", "passageiro")
+    .single();
 
-    if (error || !data) {
-      alert("Motorista não autorizado");
-      return;
-    }
+  if(existente){
+    alert("CPF já cadastrado. Use o login de passageiro.");
+    window.location.href = "login-passageiro.html";
+    return;
   }
 
   const usuario = {
-    tipo,
+    tipo: "passageiro",
     nome,
     telefone,
     cpf,
@@ -123,22 +154,18 @@ async function cadastrar() {
     created_at: new Date().toISOString()
   };
 
-  localStorage.setItem("usuarioRF", JSON.stringify(usuario));
-
-  const { error: insertError } = await supabaseClient
+  const { error } = await supabaseClient
     .from("usuarios")
     .insert(usuario);
 
-  if (insertError) {
+  if(error){
     alert("Erro ao salvar cadastro");
     return;
   }
 
-  if (tipo === "motorista") {
-    window.location.href = "index.html";
-  } else {
-    window.location.href = "index-passageiro.html";
-  }
+  localStorage.setItem("usuarioRF", JSON.stringify(usuario));
+
+  window.location.href = "dashboard-passageiro.html";
 }
 </script>
 
