--- a/origem.html
+++ b/origem.html
@@ -6,14 +6,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link rel="stylesheet" href="./theme/theme.css">
-<link rel="stylesheet" href="./theme/layout.css">
-<link rel="stylesheet" href="./theme/components.css">
 
 <style>
 :root{
   --gold:#D4AF37;
   --gold-soft:#E6C97A;
-  --bg:#F5F5F5;
   --text:#444;
 }
 
@@ -81,6 +78,7 @@ body{
   background:#fff;
   color:#000;
   font-size:1rem;
+  cursor:pointer;
 }
 
 /* BOTÕES */
@@ -92,6 +90,7 @@ body{
   font-weight:700;
   border-radius:18px;
   box-shadow:0 8px 18px rgba(212,175,55,.35);
+  cursor:pointer;
 }
 
 .secondary{
@@ -99,6 +98,7 @@ body{
   padding:14px;
   border-radius:16px;
   background:#fff;
+  cursor:pointer;
 }
 
 /* MODAL */
@@ -125,115 +125,112 @@ body{
 <body>
 
 <div class="page">
-<div class="box">
+  <div class="box">
 
-  <div class="header">
-    <h1>ORIGEM</h1>
-    <p>Selecione o ponto de partida</p>
-  </div>
-
-  <div class="card-box">
-    <div class="select-btn" id="origemBtn">
-      Toque para escolher a origem
+    <div class="header">
+      <h1>ORIGEM</h1>
+      <p>Selecione o ponto de partida</p>
     </div>
+
+    <div class="card-box">
+      <div class="select-btn" id="origemBtn">
+        Toque para escolher a origem
+      </div>
+    </div>
+
+    <button class="primary" id="btnAvancar" disabled>
+      Continuar
+    </button>
+
+    <button class="secondary" id="btnInicio">
+      ⬅ Início
+    </button>
+
   </div>
-
-  <button class="primary" id="btnAvancar" disabled>
-    Continuar
-  </button>
-
-  <button class="secondary" id="btnInicio">
-    ⬅ Início
-  </button>
-
-</div>
 </div>
 
 <div class="modal" id="modal">
   <div class="modal-content">
-    <input id="busca" placeholder="Buscar origem..." style="width:100%;padding:14px;border-radius:14px;border:1px solid #ddd;color:#000">
+    <input
+      id="busca"
+      placeholder="Buscar origem..."
+      style="width:100%;padding:14px;border-radius:14px;border:1px solid #ddd;color:#000"
+    >
     <div id="lista" style="margin-top:10px;max-height:260px;overflow:auto"></div>
   </div>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-<script src="core/auth.js"></script>
 <script src="core/global.js"></script>
 <script src="core/datamanager.js"></script>
 
 <script>
-(async () => {
-  const usuario = JSON.parse(localStorage.getItem("usuarioRF"));
+/* ================= PROTEÇÃO DE ACESSO ================= */
 
-  // Não cadastrado
-  if(!usuario){
-    window.location.href = "cadastro.html";
-    return;
+const usuario = JSON.parse(localStorage.getItem("usuarioRF"));
+
+// Não logado → index neutra
+if(!usuario){
+  window.location.href = "index.html";
+}
+
+// Botão início conforme perfil
+document.getElementById("btnInicio").onclick = () => {
+  if(usuario.tipo === "motorista"){
+    window.location.href = "dashboard-motorista.html";
+  }else{
+    window.location.href = "dashboard-passageiro.html";
   }
-
-  // Bloqueio automático (admin)
-  const valido = await validarUsuarioAtivo();
-  if(!valido) return;
-
-  // Botão início conforme perfil
-  document.getElementById("btnInicio").onclick = () => {
-    if(usuario.tipo === "motorista"){
-      window.location.href = "index.html";
-    }else{
-      window.location.href = "index-passageiro.html";
-    }
-  };
-})();
-
-/* ================= LÓGICA ORIGINAL ================= */
-
-const origemBtn=document.getElementById("origemBtn");
-const modal=document.getElementById("modal");
-const lista=document.getElementById("lista");
-const busca=document.getElementById("busca");
-const btn=document.getElementById("btnAvancar");
-
-let origens=[];
-
-origemBtn.onclick=()=>{
-  modal.style.display="flex";
-  busca.value="";
-  render(origens);
-  setTimeout(()=>busca.focus(),100);
 };
 
-modal.onclick=e=>{
-  if(e.target===modal) modal.style.display="none";
+/* ================= LÓGICA DE ORIGEM ================= */
+
+const origemBtn = document.getElementById("origemBtn");
+const modal = document.getElementById("modal");
+const lista = document.getElementById("lista");
+const busca = document.getElementById("busca");
+const btn = document.getElementById("btnAvancar");
+
+let origens = [];
+
+origemBtn.onclick = () => {
+  modal.style.display = "flex";
+  busca.value = "";
+  render(origens);
+  setTimeout(() => busca.focus(), 100);
+};
+
+modal.onclick = e => {
+  if(e.target === modal) modal.style.display = "none";
 };
 
 async function carregar(){
   await DataManager.carregar();
-  origens=DataManager.listarOrigens();
+  origens = DataManager.listarOrigens();
 }
 
 function render(arr){
-  lista.innerHTML="";
-  arr.forEach(o=>{
-    const div=document.createElement("div");
-    div.textContent=o;
-    div.style.padding="14px";
-    div.style.color="#000";
-    div.onclick=()=>{
-      origemBtn.textContent=o;
-      App.set("origem",o);
-      modal.style.display="none";
-      btn.disabled=false;
+  lista.innerHTML = "";
+  arr.forEach(o => {
+    const div = document.createElement("div");
+    div.textContent = o;
+    div.style.padding = "14px";
+    div.style.cursor = "pointer";
+    div.onclick = () => {
+      origemBtn.textContent = o;
+      App.set("origem", o);
+      modal.style.display = "none";
+      btn.disabled = false;
     };
     lista.appendChild(div);
   });
 }
 
-busca.oninput=()=>{
-  const t=busca.value.toLowerCase();
-  render(origens.filter(o=>o.toLowerCase().includes(t)));
+busca.oninput = () => {
+  const t = busca.value.toLowerCase();
+  render(origens.filter(o => o.toLowerCase().includes(t)));
 };
 
-btn.onclick=()=>App.go("destino.html");
+btn.onclick = () => App.go("destino.html");
 
 carregar();
 </script>
