--- a/dashboard-admin.html
+++ b/dashboard-admin.html
@@ -133,7 +133,7 @@ if(!admin || admin.tipo !== "admin"){
 /* ================= AÇÕES ================= */
 
 function abrirPainel(){
-  window.location.href = "admin.html";
+  window.location.href = "admin-painel.html";
 }
 
 function voltarApp(){
